# maventa2odoo

./: CMakeLists.txt  LICENSE  README.md  build_defs.h  config_app.h  config_app.h.in  config_profile.cpp  config_profile.h  finvoice_invoice.cpp  finvoice_invoice.h  logger.cpp  logger.h  main.cpp  maventa2odoo.conf  maventa2odoo.conf.debug  maventa_api.cpp  maventa_api.h  maventa_invoice.cpp  maventa_invoice.h  odoo_api.cpp  odoo_api.h  util.cpp  util.h  version_num.h  zipper.cpp  zipper.h
